// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Componenti/ThumbNav Esempio 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <ul
      className="thumb-nav thumb-nav-black thumb-nav-auto"
    >
      <li>
        <img
          aria-hidden="true"
          className="thumb-nav-resizer"
          src="resizer-3x2.svg"
        />
        <a
          className=""
          href="#"
        >
          <img
            alt="Visualizza immagine 1"
            src="https://picsum.photos/480/320?image=1044"
          />
        </a>
      </li>
      <li>
        <img
          aria-hidden="true"
          className="thumb-nav-resizer"
          src="resizer-3x2.svg"
        />
        <a
          className=""
          href="#"
        >
          <img
            alt="Visualizza immagine 2"
            src="https://picsum.photos/480/320?image=1050"
          />
        </a>
      </li>
      <li>
        <img
          aria-hidden="true"
          className="thumb-nav-resizer"
          src="resizer-3x2.svg"
        />
        <a
          className=""
          href="#"
        >
          <img
            alt="Visualizza immagine 3"
            src="https://picsum.photos/480/320?image=1037"
          />
        </a>
      </li>
      <li>
        <img
          aria-hidden="true"
          className="thumb-nav-resizer"
          src="resizer-3x2.svg"
        />
        <a
          className=""
          href="#"
        >
          <img
            alt="Visualizza immagine 4"
            src="https://picsum.photos/480/320?image=1040"
          />
        </a>
      </li>
      <li>
        <img
          aria-hidden="true"
          className="thumb-nav-resizer"
          src="resizer-3x2.svg"
        />
        <a
          className=""
          href="#"
        >
          <img
            alt="Visualizza immagine 5"
            src="https://picsum.photos/480/320?image=1055"
          />
        </a>
      </li>
      <li>
        <img
          aria-hidden="true"
          className="thumb-nav-resizer"
          src="resizer-3x2.svg"
        />
        <a
          className=""
          href="#"
        >
          <img
            alt="Visualizza immagine 6"
            src="https://picsum.photos/480/320?image=1057"
          />
        </a>
      </li>
    </ul>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/ThumbNav Overlay 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="test-gallery position-relative"
    >
      <img
        alt="Amazing landscape"
        className="test-image"
        src="https://picsum.photos/1280/720?image=1050"
      />
      <ul
        className="thumb-nav thumb-nav-small thumb-nav-vertical thumb-nav-left"
      >
        <li>
          <img
            aria-hidden="true"
            className="thumb-nav-resizer"
            src="resizer-3x2.svg"
          />
          <a
            className=""
            href="#"
          >
            <img
              alt="Visualizza immagine 1"
              src="https://picsum.photos/480/320?image=1044"
            />
          </a>
        </li>
        <li>
          <img
            aria-hidden="true"
            className="thumb-nav-resizer"
            src="resizer-3x2.svg"
          />
          <a
            className="active"
            href="#"
          >
            <img
              alt="Visualizza immagine 2"
              src="https://picsum.photos/480/320?image=1050"
            />
          </a>
        </li>
        <li>
          <img
            aria-hidden="true"
            className="thumb-nav-resizer"
            src="resizer-3x2.svg"
          />
          <a
            className=""
            href="#"
          >
            <img
              alt="Visualizza immagine 3"
              src="https://picsum.photos/480/320?image=1037"
            />
          </a>
        </li>
        <li>
          <img
            aria-hidden="true"
            className="thumb-nav-resizer"
            src="resizer-3x2.svg"
          />
          <a
            className=""
            href="#"
          >
            <img
              alt="Visualizza immagine 4"
              src="https://picsum.photos/480/320?image=1040"
            />
          </a>
        </li>
      </ul>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;
